Please initial your changes (there's a key at bottom) and add a date for each
release
================================================================================
0.9.15a3 (Nov ??, 2002)
  - corrected a dictionary bug in the Python version of NameMapper (TR)

0.9.15a2 (Nov 4th, 2002)
  - Filters now have access to the name of the placeholder they're filtering.
    In the .filter() method, kw['rawExpr'] gives the entire placeholder name
    including subscripts and arguments, exactly as it appears in the template
    definition. (TR)
  - Fix three bugs in "cheetah compile -R": (1) the generated class name 
    contained the subdirectory, (2) the destination path did not contain the
    subdirectory, (3) Cheetah failed to create the destination subdirectory
    if missing.  All subdirectories created have an "__init__.py" file. 
    "cheetah fill -R" does the same thing but does not create 
    "__init__.py". (MO)  NOTE: this is still buggy!
  - New directory "attic" in source contains code that has been abandoned
    for now but may come in handy someday. (MO)
  - Tests.CheetahWrapper: test suite for "cheetah compile" and
    "cheetah fill".  If the module is run from the command line, the
    option "--list PATH/CheetahWrapper.py", lists all scenarios that would be
    tested; the argument is the path to the test module itself. (MO)
  - made Cheetah.NameMapper.NotFound subclass the builtin LookupError (TR)
  - added an initial implementation of single line #if directives
    #if <condition> then <true> else <false>
    The parsing is fairly rudimentary for now and assumes that the keywords
    'then' and 'else' won't appear any inside a string in this directive (TR)

0.9.15a1 (Oct 6th, 2002)
  - fixed a package-relative import bug in ImportHooks.py (TR)
  - set 'monitorSrcFile' to false as it was causing problems with the
    ImportHooks ... This might be temporary as the problem needs more thought
    (TR)