@@ -1,19 +1,20 @@
 #!/usr/bin/env python
-# $Id: CheetahWrapper.py,v 1.11 2002/10/20 09:20:42 hierro Exp $
+# $Id: CheetahWrapper.py,v 1.12 2002/11/10 09:08:16 hierro Exp $
 """Cheetah command-line interface.
 
 2002-09-03 MSO: Total rewrite.
 2002-09-04 MSO: Bugfix, compile command was using wrong output ext.
+2002-11-08 MSO: Another rewrite.
 
 Meta-Data
 ================================================================================
 Author: Tavis Rudd <tavis@damnsimple.com> and Mike Orr <iron@mso.oz.net>
-Version: $Revision: 1.11 $
+Version: $Revision: 1.12 $
 Start Date: 2001/03/30
-Last Revision Date: $Date: 2002/10/20 09:20:42 $
+Last Revision Date: $Date: 2002/11/10 09:08:16 $
 """
 __author__ = "Tavis Rudd <tavis@damnsimple.com> and Mike Orr <iron@mso.oz.net>"
-__revision__ = "$Revision: 1.11 $"[11:-2]
+__revision__ = "$Revision: 1.12 $"[11:-2]
 
 ##################################################
 ## DEPENDENCIES
@@ -24,7 +25,6 @@ import cPickle as pickle
 from _properties import Version
 from Compiler import Compiler
 from Template import Template
-from Cheetah.Utils.dualglob import dualglob
 from Cheetah.Utils.Misc import mkdirsWithPyInitFiles
 from Cheetah.Utils.optik import OptionParser
 
@@ -41,6 +41,18 @@ moduleNameRx = re.compile(  R"^[a-zA-Z_][a-zA-Z_0-9]*$"  )
    
 class Error(Exception):
     pass
+
+
+class Bundle:
+    """Wrap the source, destination and backup paths in one neat little class.
+       Used by CheetahWrapper.getBundles().
+    """
+    def __init__(self, **kw):
+        self.__dict__.update(kw)
+
+    def __repr__(self):
+        return "<Bundle %r>" % self.__dict__
+
 
 class MyOptionParser(OptionParser):
     standard_option_list = [] # We use commands for Optik's standard options.
@@ -103,19 +115,20 @@ OPTIONS FOR "compile" AND "fill":
   --iext EXT, --oext EXT : input/output filename extensions
     (default for compile: tmpl/py,  fill: tmpl/html)
   -R : recurse subdirectories looking for input files
-  -p : output to standard output (pipe)
   --debug : print lots of diagnostic output to standard error
   --env : put the environment in the searchList
+  --flat : no destination subdirectories
+  --nobackup : don't make backups
   --pickle FILE : unpickle FILE and put that object in the searchList
+  --stdout, -p : output to standard output (pipe)
 
 Run "cheetah help" for the main help screen.
 """
 
 ##################################################
-## MAIN ROUTINE
+## CheetahWrapper CLASS
 
 class CheetahWrapper:
-
     MAKE_BACKUPS = True
     BACKUP_SUFFIX = "_bak"
 
@@ -124,13 +137,14 @@ class CheetahWrapper:
         self.command = None
         self.opts = None
         self.files = None
+        self.sourceFiles = []
         self.searchList = []
 
     ##################################################
     ## HELPER METHODS
 
     def backup(self, dst):
-        """Back up a file verbosely."""
+        """Back up a destination file and return the backup path."""
 
         if not os.path.exists(dst):
             return None
@@ -138,6 +152,14 @@ class CheetahWrapper:
         shutil.copyfile(dst, backup)
         return backup
 
+    def _fixExts(self):
+        assert self.opts.oext, "oext is empty!"
+        iext, oext = self.opts.iext, self.opts.oext
+        if iext and not iext.startswith("."):
+            self.opts.iext = "." + iext
+        if oext and not oext.startswith("."):
+            self.opts.oext = "." + oext
+    
 
     def parseOpts(self, args):
         self.isCompile = isCompile = self.command[0] == 'c'
@@ -149,16 +171,19 @@ class CheetahWrapper:
         pao("--iext", action="store", dest="iext", default=".tmpl")
         pao("--oext", action="store", dest="oext", default=defaultOext)
         pao("-R", action="store_true", dest="recurse", default=0)
-        pao("-p", action="store_true", dest="stdout", default=0)
+        pao("--stdout", "-p", action="store_true", dest="stdout", default=0)
         pao("--debug", action="store_true", dest="debug", default=0)
         pao("--env", action="store_true", dest="env", default=0)
         pao("--pickle", action="store_true", dest="pickle", default=0)
+        pao("--flat", action="store_true", dest="flat", default=0)
+        pao("--nobackup", action="store_true", dest="nobackup", default=0)
         self.opts, self.files = opts, files = parser.parse_args(args)
         if opts.debug:
             print >>sys.stderr, "cheetah compile", args
             print >>sys.stderr, "Options are"
             print >>sys.stderr, pprint.pformat(vars(opts))
             print >>sys.stderr, "Files are", files
+        self._fixExts()
         if opts.env:
             self.searchList.append(os.environ)
         if opts.pickle:
@@ -177,74 +202,174 @@ class CheetahWrapper:
             sys.stdout.write(output)
 
 
-    def verifyBasenameIsLegalModuleName(self, base, src):
-        """Does what it says.
-           
-           in : base, string, the base name to check.
-                src, string, the entire source path (for error message).
-        """
-
-        if not moduleNameRx.match(base):
-            raise Error(
-                "%s: base name %s contains invalid characters.  It must" \
-                " be named according to the same rules as Python modules."
-                % (base, src) )
-
-
-    def compileOrFillPair(self, pair):
-        src = pair.src
-        dst = pair.dst
-        base = pair.base
-        basename = pair.basename
-        dstDir = pair.dstDir
+    def compileOrFillBundle(self, b):
+        src = b.src
+        dst = b.dst
+        base = b.base
+        basename = b.basename
+        dstDir = os.path.dirname(dst)
         what = self.isCompile and "Compiling" or "Filling"
         print what, src, "->", dst, # No trailing newline.
-        try:
-            if self.isCompile:
-                self.verifyBasenameIsLegalModuleName(basename, src)
-                obj = Compiler(file=src, \
-                    moduleName=basename, mainClassName=basename)
-            else:
-                obj = Template(file=src, searchList=self.searchList)
-            output = str(obj)
-            bak = self.backup(dst)
-        except:
-            print # Print pending newline before error message.
-            raise
-        if bak:
+        if os.path.exists(dst) and not self.opts.nobackup:
+            bak = b.bak
             print "(backup %s)" % bak # On same line as previous message.
         else:
-            print # Print pending newline.
+            bak = None
+            print
+        if self.isCompile:
+            if not moduleNameRx.match(basename):
+                tup = basename, src
+                raise Error("""\
+%s: base name %s contains invalid characters.  It must
+be named according to the same rules as Python modules.""" % tup)
+            obj = Compiler(file=src, \
+                moduleName=basename, mainClassName=basename)
+        else:
+            obj = Template(file=src, searchList=self.searchList)
+        output = str(obj)
+        if bak:
+            shutil.copyfile(dst, bak)
         if dstDir and not os.path.exists(dstDir):
             if self.isCompile:
                 mkdirsWithPyInitFiles(dstDir)
             else:
                 os.makedirs(dstDir)
-        f = open(dst, 'w')
-        f.write(output)
-        f.close()
+        if self.opts.stdout:
+            sys.stdout.write(output)
+        else:
+            f = open(dst, 'w')
+            f.write(output)
+            f.close()
+
+    def _checkForCollisions(self, bundles):
+        """Check for multiple source paths writing to the same destination
+           path.
+        """
+        isError = False
+        dstSources = {}
+        for b in bundles:
+            if dstSources.has_key(b.dst):
+                dstSources[b.dst].append(b.src)
+            else:
+                dstSources[b.dst] = [b.src]
+        keys = dstSources.keys()
+        keys.sort()
+        for dst in keys:
+            sources = dstSources[dst]
+            if len(sources) > 1:
+                isError = True
+                sources.sort()
+                fmt = \
+"Collision: multiple source files %s map to one destination file %s"
+                print fmt % (sources, dst)
+        if isError:
+            what = self.isCompile and "Compilation" or "Filling"
+            sys.exit("%s aborted due to collisions" % what)
+                
+
+    def getBundles(self, sourceFiles):
+        debug = self.opts.debug
+        flat = self.opts.flat
+        idir = self.opts.idir
+        iext = self.opts.iext
+        nobackup = self.opts.nobackup
+        odir = self.opts.odir
+        oext = self.opts.oext
+        idirSlash = idir + os.sep
+        bundles = []
+        for src in sourceFiles:
+            # 'base' is the subdirectory plus basename.
+            base = src
+            if idir and src.startswith(idirSlash):
+                base = src[len(idirSlash):]
+            if iext and base.endswith(iext):
+                base = base[:-len(iext)]
+            basename = os.path.basename(base)
+            if flat:
+                dst = os.path.join(odir, basename + oext)
+            else:
+                dst = os.path.join(odir, base + oext)
+            bak = dst + self.BACKUP_SUFFIX
+            b = Bundle(src=src, dst=dst, bak=bak, base=base, basename=basename)
+            bundles.append(b)
+        return bundles
+
+
+    def _expandSourceFilesWalk(self, arg, dir, files):
+        """Recursion extension for .expandSourceFiles().
+           This method is a callback for os.path.walk().
+           'arg' is a list to which successful paths will be appended.
+        """
+        iext = self.opts.iext
+        for fil in files:
+            path = os.path.join(dir, fil)
+            if   path.endswith(iext) and os.path.isfile(path):
+                arg.append(path)
+            elif os.path.islink(path) and os.path.isdir(path):
+                os.path.walk(path, self._expandSourceFilesWalk, arg)
+            # If is directory, do nothing; 'walk' will eventually get it.
+
+
+    def expandSourceFiles(self, files, recurse, addIextIfMissing):
+        """Calculate source paths from 'files' by applying the 
+           command-line options.
+        """
+        idir = self.opts.idir
+        iext = self.opts.iext
+        debug = self.opts.debug
+        ret = [] 
+        for fil in self.files:
+            oldRetLen = len(ret)
+            if debug:
+                print "Expanding", fil
+            path = os.path.join(idir, fil)
+            pathWithExt = path + iext # May or may not be valid.
+            if os.path.isdir(path):
+                if recurse:
+                    os.path.walk(path, self._expandSourceFilesWalk, ret)
+                else:
+                    raise Error("source file '%s' is a directory" % path)
+            elif os.path.isfile(path):
+                ret.append(path)
+            elif addIextIfMissing and not path.endswith(iext) and \
+                os.path.isfile(pathWithExt):
+                ret.append(pathWithExt)
+                # Do not recurse directories discovered by iext appending.
+            elif os.path.exists(path):
+                print "Skipping source file '%s', not a plain file." % path
+            else:
+                print "Skipping source file '%s', not found." % path
+            if debug and len(ret) > oldRetLen:
+                print "  ... found", ret[oldRetLen:]
+        return ret
 
 
     def compileOrFill(self):
         opts, files = self.opts, self.files
+        debug = self.opts.debug
         if files == ["-"]: 
             self.compileOrFillStdin()
             return
         elif not files and opts.recurse:
             which = opts.idir and "idir" or "current"
             print "Drilling down recursively from %s directory." % which
-            files = [os.curdir]
+            sourceFiles = []
+            dir = os.path.join(self.opts.idir, os.curdir)
+            os.path.walk(dir, self._expandSourceFilesWalk, sourceFiles)
         elif not files:
             usage(HELP_PAGE1, "Neither files nor -R specified!")
-        pairs = dualglob(files, iext=opts.iext, oext=opts.oext,
-            idir=opts.idir, odir=opts.odir, recurse=opts.recurse,
-            addIextIfMissing=True, verbose=True, debug=opts.debug)
-        if opts.debug:
-            print >>sys.stderr, "I will operate on the following files:"
-            for pair in pairs:
-                print >>sys.stderr, "  %s -> %s" % (pair.src, pair.dst)
-        for pair in pairs:
-            self.compileOrFillPair(pair)
+        else:
+            sourceFiles = self.expandSourceFiles(files, opts.recurse, True)
+        sourceFiles = [os.path.normpath(x) for x in sourceFiles]
+        if debug:
+            print "All source files found:", sourceFiles
+        bundles = self.getBundles(sourceFiles)
+        if debug:
+            print "All bundles:", pprint.pformat(bundles)
+        if self.opts.flat:
+            self._checkForCollisions(bundles)
+        for b in bundles:
+            self.compileOrFillBundle(b)
             
 
     ##################################################
@@ -287,7 +412,6 @@ class CheetahWrapper:
             self.progName = progName = os.path.basename(argv[0])
             self.command = command = optionDashesRx.sub("", argv[1])
             self.parseOpts(argv[2:])
-            #opts, files = self.opts, self.files
         except IndexError:
             usage(HELP_PAGE1, "not enough command-line arguments")
 
@@ -295,7 +419,9 @@ class CheetahWrapper:
         meths = (self.compile, self.fill, self.help, self.options,
             self.test, self.version)
         for meth in meths:
-            methName = meth.func_name
+            methName = meth.__name__
+            # Or meth.im_func.func_name
+            # Or meth.func_name (Python >= 2.1 only, sometimes works on 2.0)
             methInitial = methName[0]
             if command in (methName, methInitial):
                 sys.argv[0] += (" " + methName)
@@ -306,7 +432,7 @@ class CheetahWrapper:
         # If none of the commands matched.
         usage(HELP_PAGE1, "unknown command '%s'" % command)
 
-    run = main
+    #run = main
 
 
 
