@@ -3,6 +3,11 @@ release
 ================================================================================
 0.9.15a3 (Nov ??, 2002)
   - corrected a dictionary bug in the Python version of NameMapper (TR)
+  - Rewrote the "cheetah" command (CheetahWrapper.py) again and added test
+    cases.  New options --flat and --nobackup; --stdout is now a synonym for
+    -p.  See the "cheetah compile" section in the Users' Guide for details.
+    Deleted Utils.dualglob: merged into CheetahWrapper.
+    (MO)
 
 0.9.15a2 (Nov 4th, 2002)
   - Filters now have access to the name of the placeholder they're filtering.
